# CastleGame3D2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LightFormula.ggb  README.md
Assets/: test.dds
Assets/runes/rune_a/: rune_a.blend
BlenderScripts/: level_exporter.py  model_exporter.py
GameDataFormat/: CMakeLists.txt
GameDataFormat/include/dataformat/: geometry.hpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: camera.cpp  camera.hpp  collisionhandler.cpp  collisionhandler.hpp  debug.cpp  debug.hpp  debugrenderer.cpp  debugrenderer.hpp  door.cpp  door.hpp  game.cpp  game.hpp  geometry.cpp  geometry.hpp  glalheaders.hpp  level.cpp  level.hpp  main.cpp  master.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  player.cpp  player.hpp  rune.cpp  rune.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  stb_image.h  text.cpp  text.hpp  texttrigger.cpp  texttrigger.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp  (+2 more)
